k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: home-hub
  labels:
    name: home-hub
